start regenerate script
P.S. why is JS so annoying!

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Production
 /build
+/temp
 
 # Generated files
 .docusaurus
@@ -18,4 +19,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
