--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "blood-magic-docs",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
+    "regenerate": "npx ts-node scripts/regenerate",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -14,16 +15,25 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/core": "^2.4.3",
+    "@docusaurus/preset-classic": "^2.4.3",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
+    "node-fetch": "^3.3.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tar": "^6.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/module-type-aliases": "^2.4.3",
+    "@types/decompress": "^4.2.5",
+    "@types/node": "^20.8.3",
+    "@types/tar": "^6.1.6"
   },
   "browserslist": {
     "production": [
